--- a/app/views/partials/memberHeader.phtml
+++ b/app/views/partials/memberHeader.phtml
@@ -8,7 +8,7 @@
         </div>
         <nav>
             <div id="hamburger_holder">
-                <img id="hamburger" src="../public/img/hamburger_black_small.png" alt="menu trigger image"/>
+                <img id="hamburger" src="/public/img/hamburger_black_small.png" alt="menu trigger image"/>
             </div>
             <ul id="nav_list">
                 <li><?php echo Phalcon\Tag::linkTo('member/', 'My Lists'); ?></li>
