--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,7 +41,7 @@ div#logo {
 
 div#hamburger_holder {
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     margin-top: 23px;
 }
 
