--- a/app/views/member/index.phtml
+++ b/app/views/member/index.phtml
@@ -4,11 +4,33 @@
     <div id="lists">
         <h2>My Lists:</h2>
 
-        <form action="" method="get" name="load_list">
-            <?php echo $form->render('list'); ?>
-            <?php echo $form->render('Load'); ?>
-        </form>
+        <form action="/member/" method="post" name="load_list">
+            <select id="select_list" name="list" class="form-control">
+                <?php
 
+                $html = '';
+
+                foreach($user_lists as $ul) {
+
+                    if($ul == $current_list) {
+
+                        $html .= '<option value="' . $ul->id . '" selected>' . $ul->title . '</option>' . "\n";
+
+                    } else {
+
+                        $html .= '<option value="' . $ul->id . '">' . $ul->title . '</option>' . "\n";
+
+                    }
+                }
+
+                echo $html;
+
+                ?>
+            </select>
+            <!--
+            <input type="submit" value="Load" class="btn btn-primary pull-right" />
+            -->
+        </form>
 
     </div>
 
@@ -29,7 +51,7 @@
 
                     $html .= '<tr class="' . $item_class . '">' . "\n";
                     $html .= '<td class="item_title" id="i' . $item->id . '">' . $item->name . '</td>';
-                    $html .= '<td><button class="btn btn-danger btn-small delete_item item_action"><i class="icon-white icon-remove"></i> </button></td>' . "\n";
+                    $html .= '<td><button class="btn btn-danger btn-small delete_item item_action pull-right"><i class="icon-white icon-remove"></i> </button></td>' . "\n";
                     $html .= '</tr>' . "\n";
 
                 }
@@ -40,10 +62,10 @@
             </table>
         </div>
         <div id="item_input">
-            <form name="add_item" method="post" action="addItem">
+            <form name="add_item" method="post" action="/member/addItem">
                 <input name="item_to_add" type="text" maxlength="200">
                 <input id="working_list" name="working_list" type="hidden" value="<?php echo $current_list->id; ?>">
-                <input name="add_item" class="btn btn-primary" type="submit" value="Add" >
+                <input name="add_item" class="btn btn-primary pull-right" type="submit" value="Add" >
             </form>
         </div>
     </div> <!-- end #items -->
