fixed member table styling

--- a/app/views/profile/index.phtml
+++ b/app/views/profile/index.phtml
@@ -7,7 +7,7 @@
             <input type="password" name="current_password" id="current_password" placeholder="Current password">
             <input type="password" name="new_password" id="new_password" placeholder="New password">
             <input type="password" name="repeat_password" id="repeat_password" placeholder="Repeat password">
-            <input class="btn btn-primary" type="submit" name="submit_password_change" value="Change Password">
+            <input class="btn btn-success" type="submit" name="submit_password_change" value="Change Password">
         </form>
     </div>
     <div id="change_email">
@@ -16,7 +16,7 @@
             <input type="email" name="current_email" id="current_email" value="<?php echo $user->email; ?>" disabled>
             <input type="email" name="new_email" id="new_email" placeholder="New email">
             <input type="email" name="repeat_email" id="repeat_email" placeholder="Repeat email">
-            <input class="btn btn-primary" type="submit" name="submit_email_change" value="Change Email">
+            <input class="btn btn-success" type="submit" name="submit_email_change" value="Change Email">
         </form>
     </div>
 </div>
