--- a/public/css/member.css
+++ b/public/css/member.css
@@ -10,6 +10,10 @@ div#items {
     align-items: center;
 }
 
+div#items div#items_container p {
+    margin-bottom: 60px;
+}
+
 form input[type="submit"] {
     margin-left: 15px;
 }
