added maxlength to input fields

--- a/app/views/edit/index.phtml
+++ b/app/views/edit/index.phtml
@@ -4,7 +4,7 @@
     <div id="add_list_form">
         <form name="add_list" method="post" action="addList">
             <label for="">Add list: </label>
-            <input type="text" name="list_title" placeholder="New list title">
+            <input type="text" name="list_title" maxlength="50" placeholder="New list title">
             <input class="btn btn-primary" type="submit" value="Add">
         </form>
     </div>
