--- a/app/views/profile/index.phtml
+++ b/app/views/profile/index.phtml
@@ -4,9 +4,9 @@
     <div id="change_password">
         <h3>Change Password</h3>
         <form name="change_password" method="post" action="changePassword">
-            <input type="password" name="current_password" id="current_password" placeholder="Current password">
-            <input type="password" name="new_password" id="new_password" placeholder="New password">
-            <input type="password" name="repeat_password" id="repeat_password" placeholder="Repeat password">
+            <input type="password" name="current_password" id="current_password" maxlength="16" placeholder="Current password">
+            <input type="password" name="new_password" id="new_password" maxlength="16" placeholder="New password">
+            <input type="password" name="repeat_password" id="repeat_password" maxlength="16" placeholder="Repeat password">
             <input class="btn btn-primary" type="submit" name="submit_password_change" value="Change Password">
         </form>
     </div>
@@ -14,8 +14,8 @@
         <h3>Change Email</h3>
         <form name="change_email" method="post" action="changeEmail">
             <input type="email" name="current_email" id="current_email" value="<?php echo $user->email; ?>" disabled>
-            <input type="email" name="new_email" id="new_email" placeholder="New email">
-            <input type="email" name="repeat_email" id="repeat_email" placeholder="Repeat email">
+            <input type="email" name="new_email" id="new_email" maxlength="50" placeholder="New email">
+            <input type="email" name="repeat_email" id="repeat_email" maxlength="50" placeholder="Repeat email">
             <input class="btn btn-primary" type="submit" name="submit_email_change" value="Change Email">
         </form>
     </div>
