moved member forms from controller

--- a/app/views/member/index.phtml
+++ b/app/views/member/index.phtml
@@ -4,69 +4,17 @@
     <div id="lists">
         <h2>My Lists:</h2>
 
-        <form action="/member/" method="post" name="load_list">
-            <select id="select_list" name="list" class="form-control">
-                <?php
-
-                $html = '';
-
-                foreach($user_lists as $ul) {
-
-                    if($ul == $current_list) {
-
-                        $html .= '<option value="' . $ul->id . '" selected>' . $ul->title . '</option>' . "\n";
-
-                    } else {
-
-                        $html .= '<option value="' . $ul->id . '">' . $ul->title . '</option>' . "\n";
-
-                    }
-                }
-
-                echo $html;
-
-                ?>
-            </select>
-        </form>
+        <?php echo Phalcon\Tag::form(array("member/", "method" => "post", "name" => "load_list")) . "\n"; ?>
+        <?php echo $listselectform->render('select') . "\n"; ?>
+        <?php echo Phalcon\Tag::endForm() . "\n"; ?>
 
     </div>
 
     <div id="items">
         <div id="items_container">
-            <?php
 
-            $html = '';
+            <?php $this->partial('partials/items'); ?>
 
-            if(count($items) < 1) {
-
-                $html .= '<p>You haven\'t add any items yet.</p>' . "\n";
-
-            } else {
-
-                $html .= '<table>' . "\n";
-
-                foreach($items as $item) {
-                    $item_class = '';
-                    if($item->tapped) {
-                        $item_class = 'item_name tapped';
-                    } else {
-                        $item_class = 'item_name untapped';
-                    }
-
-                    $html .= '<tr class="' . $item_class . '">' . "\n";
-                    $html .= '<td class="item_title" id="i' . $item->id . '">' . $item->name . '</td>';
-                    $html .= '<td><button class="btn btn-danger btn-small delete_item item_action pull-right"><i class="icon-white icon-remove"></i> </button></td>' . "\n";
-                    $html .= '</tr>' . "\n";
-
-                }
-
-                $html .= '</table>' . "\n";
-
-            }
-
-            echo $html;
-
-            ?>
         </div>
         <div id="item_input">
 
