--- a/app/views/editlist/index.phtml
+++ b/app/views/editlist/index.phtml
@@ -2,18 +2,19 @@
 <div>
     <?php echo $this->flashSession->output(); ?>
     <div id="edit_list">
-        <form name="edit_list" method="post" action="saveTitle">
-            <label for="current_title">Current Title: </label>
-            <input id="current_title" name="list_title" type="text" value="<?php echo $list->title; ?>" disabled>
 
-            <label for="new_title">New Title: </label>
-            <input id="new_title" name="new_title" type="text" maxlength="50" placeholder="Enter new title">
-            <input name="list_id" value="<?php echo $list->id; ?>" hidden>
-            <div id="edit_controls">
-                <input class="btn btn-success" type="submit" value="Save">
-                <a class="btn btn-danger" id="cancel" href="/edit/">Cancel</a>
-            </div>
-        </form>
+        <?php echo Phalcon\Tag::form(array("editlist/saveTitle", "method" => "post", "name" => "edit_list")) . "\n"; ?>
+        <?php echo $editListForm->label('current_title') . "\n"; ?>
+        <?php echo $editListForm->render('current_title') . "\n"; ?>
+        <?php echo $editListForm->label('new_title') . "\n"; ?>
+        <?php echo $editListForm->render('new_title') . "\n"; ?>
+        <?php echo $editListForm->render('list_id') . "\n"; ?>
+        <div id="edit_controls">
+            <?php echo $editListForm->render('Save') . "\n"; ?>
+            <a class="btn btn-danger" id="cancel" href="/edit/">Cancel</a>
+        </div>
+        <?php echo Phalcon\Tag::endForm() . "\n"; ?>
+
     </div>
     <div id="members">
         <h3>Members of this list</h3>
