--- a/public/css/invitations.css
+++ b/public/css/invitations.css
@@ -1,3 +1,7 @@
+label {
+    text-align: left;
+    width: 100%;
+}
 
 div#invite,
 div#invite form {
@@ -7,7 +11,7 @@ div#invite form {
 }
 
 div#invite form input[type="submit"] {
-    margin-left: 15px;
+    margin-top: 10px;
 }
 
 table {
