fixed no lists / register user bug, and adjusted main menu fonts

--- a/app/views/about/index.phtml
+++ b/app/views/about/index.phtml
@@ -13,5 +13,5 @@
 </p>
 <p>
     If you like/hate the project, or you want to send me an email for whatever reasons, you can find me at
-    <a href="mailto:nils@martinussen.email">nils@martinussen.email</a>.
+    <a href="mailto:dev@martinussen.email">dev@martinussen.email</a>.
 </p>
